Fix style on mobile.

--- a/style.css
+++ b/style.css
@@ -26,6 +26,12 @@ ul {
   margin-bottom: 3em;
 }
 
+@media only screen and (max-width: 500px) {
+  #index {
+    column-count: 4;
+  }
+}
+
 a[href] {
   color: #095ca7;
   text-decoration: none;
